# ChangeLog for net-misc/usbip
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> +usbip-0.1.7-r1.ebuild,
  +files/usbip.init:
  revision bump, added init script

  21 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> +usbip-0.1.7-r1.ebuild:
  ebuild bump,fix code

  16 Jun 2009; A. Vinogradov <spamslepnoga@inbox.ru>
 Version  bump 0.1.7, initial commit	
  07 May 2008; Chi-Thanh Christopher Nguyen <chithanh@cs.tu-berlin.de>
  +usbip-0.1.6.ebuild, +metadata.xml:
  Add ebuild for usbip from bug 220771
