@@ -1,6 +1,5 @@
 AUX usbip.init 493 RMD160 20937692a2987f7122a195d5b626e30344e3b321 SHA1 2d73960acf067b6be0bf1bc0c212fc187419e219 SHA256 30580d87beeafafae9fb494c009b591086c19a3a32288e5d3745cf2d941ff236
 DIST usbip-0.1.7.tar.gz 231215 RMD160 bbb2cfdc9ab6fc5fff7f0371c232cf584bdb8f9b SHA1 854dc66e70b5fc84c251512226043b545791743f SHA256 a2dfd3b8c6a3a0c72ddf0cf3f01ed20b4ed9eb97c3a859542b6932ee44deb628
 EBUILD usbip-0.1.7-r1.ebuild 998 RMD160 19c891d59ba42f78194219bfbfe574fc08802889 SHA1 0ff2686c96baaa132d03189ad8252d6b7dba5f12 SHA256 64c36eee7ab9c8f484b38bf85437e4cd112a7f06c9dca18c2a22d3e3a8446e60
-EBUILD usbip-0.1.7.ebuild 1671 RMD160 91d6bb6cbb0e0ee2edd2039c9adebb33de82079b SHA1 0501a0e213728b4db2cf2fe59fc32f1d5d2df218 SHA256 7022dddb3d1e2174d1ab0228be5a3a6ca87b81ae68a38570f130bcb6af496362
-MISC ChangeLog 590 RMD160 4ec401d7706052a04e689408941a458f1bdb32a9 SHA1 c66632325ae755b0c54705ed488552d28ec2a1bc SHA256 fa16285fff30ce63728b90dc77999aae9e64db0e63aabf2a5362d56175a3a113
+MISC ChangeLog 702 RMD160 1929ee28dd394e56e8124c424a55b848900dd179 SHA1 e212ac6f186107974296ba1eea9c9e0f2bacbcfb SHA256 1656ecc8281a60f837651790c9ef60753b57220ae23f522bbec551186b0b0d51
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
