@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> -usbip-0.1.7.ebuild:
+  remove old revision net-misc/usbip
+
   22 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> +usbip-0.1.7-r1.ebuild,
   +files/usbip.init:
   revision bump, added init script
